# razerctl

./: .gitignore  60-blackshark.rules  Cargo.toml  README.md  blackshark  blackshark-state  install.sh  polybar-blackshark  release.toml  update.sh
.github/workflows/: audit.yml  ci.yml  release.yml
crates/blackshark-client/: Cargo.toml
crates/blackshark-client/src/: lib.rs
crates/blackshark-ctl/: Cargo.toml
crates/blackshark-ctl/src/: main.rs
crates/blackshark-gui/: Cargo.toml
crates/blackshark-gui/src/: main.rs
crates/blackshark-gui/tests/: portable_scope.rs
crates/blackshark-gui/ui/: main.slint
crates/blacksharkd/: Cargo.toml
crates/blacksharkd/src/: config.rs  dbus.rs  hid_actor.rs  main.rs  state.rs
crates/device/: Cargo.toml
crates/device/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
dkms/: README.md
dkms/razer-cfg255-1.0/: Makefile  dkms.conf  razer-cfg255.c
tests/: portable_scope.sh  test_blackshark_state.py
