[package]
name = "blackshark-ctl"
version = "0.1.4"
edition = "2021"

[[bin]]
name = "blackshark-ctl"
path = "src/main.rs"

[dependencies]
blackshark-client = { path = "../blackshark-client" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
zbus = { version = "4", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
