[package]
name = "blacksharkd"
version = "0.1.4"
edition = "2021"

[[bin]]
name = "blacksharkd"
path = "src/main.rs"

[dependencies]
blackshark-protocol = { path = "../protocol" }
blackshark-device = { path = "../device" }
hidapi = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus = { version = "4", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
